# defi-user-behavior-clustering

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflow/: streamlit-check.yml
.github/workflows/: ci_cd_pipeline.yml  health-check.yml  streamlit-check.yml
.streamlit/: config.toml
config/: dl_config.yaml  standardized.csv  to_standardize.csv
data/: api_testing.ipynb  protocols.json
docs/: dataset_card.md  etl_pipeline_flow.md  statistical_analysis.md
docs/graphics/network/: address_address_graph.html  address_protocol_graph.html  (+1 more)
docs/markdown/: dataset_card.md  etl_pipeline_flow.md  features.md
ebauche/: api_testing.ipynb  contracts_data.csv  key_protocols.json  user_contracts_december_2024.csv
etl/: main.py
etl/etl_pipeline/: utils.py
ml/: pipeline.py
ml/features/: features_engineering.py
ml/hdbscan/: hdbscan_analysis.py  hdbscan_pipeline.py
ml/helper/: splitting.py
ml/interpreter/: comparison.py
ml/kmeans/: k_means.py  kmeans_analysis.py  kmeans_pipeline.py
ml/processing/: distribution_analysis.py  features_engineering.py  selection.py
ml/utils/: hf_hub.py  splitting.py
models/kmeans/: optuna_study_results.json
notebooks/: clustering_analysis.ipynb  dataset_preview.ipynb  old_preprocessing.ipynb  old_processing_with_spark.ipynb  preprocessing.ipynb
notes/: sujet.md
notes/1_data/: step1_data.md  step_1_doc.md
notes/2_clustering_initial/: step2_clustering_initial.md
notes/3_clustering_avance/: step3_clustering_avance.md
notes/4_analyse/: step4_analyse.md
notes/5_visualisation_et_iteration/: step5_visualisation_et_iteration.md
old/hdbscan/: optuna_study_results.json  optuna_study_results_kaggle.json
scripts/: analyze_dimensions.py  create_features.py  kmeans_pipeline.py  plot_address_protocols.py  plot_address_protocols_2.py  plot_graphs.py  processing_users.py  standardise_features.py  update_hf_space.py
src/: __init__.py  app.py  main.py
src/etl/: main.py
src/etl_pipeline/: __init__.py  config.py  mongodb_handler.py  pipeline.py  protocols.py  utils.py
src/front-end/: __init__.py  app.py
src/frontend/: components.py  layout.py  recommendations.py
(+156 files in other folders)
